# solopdf

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build.yml
app/: index.html  package.json  tsconfig.json  vite.config.ts
app/scripts/: copy-pdfjs-assets.mjs
app/src/: App.vue  env.d.ts  export.ts  i18n.ts  main.ts  ocr.ts  print.ts  store.ts  styles.css
app/src-tauri/: Cargo.toml  PrivacyInfo.xcprivacy  SoloPDF-iOS.mobileprovision  SoloPDF.provisionprofile  build.rs  entitlements.mas.plist  tauri.conf.json  tauri.linux.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src-tauri/src/ocr/: mod.rs  ppocr.rs  preprocess.rs  textlayer.rs  vision.rs
app/src-tauri/tests/: ocr_integration.rs
app/src-tauri/vision_shim/: ocr_shim.m
app/src/annotations/: manager.ts
app/src/book/: epub.ts  extract.ts  marks.ts
app/src/components/: BookView.vue  HighlightPopover.vue  ImageOcrDialog.vue  OcrDialog.vue  PasswordDialog.vue  SearchBar.vue  SettingsPanel.vue  Sidebar.vue  TabBar.vue  Toolbar.vue  WelcomeScreen.vue
app/src/platform/: index.ts  tauri.ts  types.ts  web.ts
app/src/viewer/: controller.ts  loader.ts  search.ts  transport.ts
cli/: package.json
cli/src/: index.mjs
core/: package.json  tsconfig.build.json  vitest.config.ts
core/src/: anchor.ts  index.ts  reading-order.ts  reflow.ts  sidecar.ts  txt-book.ts  types.ts
core/tests/: anchor.test.ts  reading-order.test.ts  reflow.test.ts  sidecar.test.ts  txt-book.test.ts
dev-mcp/: package.json
dev-mcp/src/: index.mjs
scripts/: build-ios.sh  build-mas.sh  submit-ios.sh  submit-mas.sh
scripts/asc/: asc.mjs  metadata.mjs  release.mjs  setup-appstore.mjs
test-fixtures/: README.md  novel-gbk.txt  novel-utf8.txt  sanguo-yanyi.epub
