[package]
name = "solopdf"
version = "0.1.0"
description = "SoloPDF — free, ad-free, local-first PDF reader with highlights-as-Markdown"
authors = ["alexlee"]
edition = "2021"
autobins = false

# Match tauri.conf.json mainBinaryName exactly — SoloMD shipped a Windows
# NSIS shortcut pointing at the wrong casing once; not repeating that.
[[bin]]
name = "SoloPDF"
path = "src/main.rs"

[lib]
name = "solopdf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
twox-hash = "2"

# desktop-only: single-instance forwarding + the SOLOPDF_DEBUG bridge
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tiny_http = "0.12"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
