[package]
name = "solopdf"
version = "0.2.0"
description = "SoloPDF — free, ad-free, local-first PDF reader with highlights-as-Markdown"
authors = ["alexlee"]
edition = "2021"
autobins = false
# two [[bin]]s (app + solopdf-ocr): tauri needs to know which one is the app
default-run = "SoloPDF"

# Match tauri.conf.json mainBinaryName exactly — SoloMD shipped a Windows
# NSIS shortcut pointing at the wrong casing once; not repeating that.
[[bin]]
name = "SoloPDF"
path = "src/main.rs"

# OCR CLI driver — shipped artifact (see README); desktop only
[[bin]]
name = "solopdf-ocr"
path = "src/bin/ocr_cli.rs"

[lib]
name = "solopdf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# enables the PP-OCR ONNX engine on macOS too, so the Windows/Linux OCR
# pipeline can be developed and tested on this machine before UTM runs
ppocr = ["dep:ort", "dep:image"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
twox-hash = "2"
lopdf = "0.36"
ort = { version = "2.0.0-rc.10", optional = true, features = ["download-binaries"] }
image = { version = "0.25", optional = true, default-features = false, features = ["png", "jpeg"] }

# PP-OCR is the shipped engine on Windows/Linux
[target.'cfg(any(windows, target_os = "linux"))'.dependencies]
ort = { version = "2.0.0-rc.10", features = ["download-binaries"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# desktop-only: single-instance forwarding
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

# SOLOPDF_DEBUG bridge — also on iOS: the simulator shares localhost with
# the host, which is what lets E2E tests drive the real iOS app
[target.'cfg(not(target_os = "android"))'.dependencies]
tiny_http = "0.12"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
